Reimplemented ZEO_ELEM_EDGEXD_LINSCALE as a static function generator. Reimplemented ZEO_ELEM_EDGEXD_DIST_FROM_POINT to use zEdgeXDClosest. Modified ZEO_ELEM_EDGEXD_CLOSEST not to use zEdgeXDLinScale. Reimplemented zVec3DOrthoSpace by using zVec3DOrthoNormal. Modified ZEO_ELEM_EDGEXD_PROJ_POINT. Added zEdge2DPointIsOn. Added ZEO_ELEM_EDGEXD_POINT_IS_ON_PROTOTYPE and ZEO_ELEM_EDGEXD_POINT_IS_ON, and reimplemented zEdge3DPointIsOn. Removed _ZEO_ELEM_EDGEXD_PROJ_SET_PROTOTYPE. Added ZEO_ELEM_EDGEXD_POINT_IS_ON_LINE_PROTOTYPE and ZEO_ELEM_EDGEXD_POINT_IS_ON_LINE, and added zEdge2D/3DPointIsOnLine. Added zEdge2DFPrint. Added ZEO_ELEM_EDGEXD_FPRINT_PROTOTYPE and ZEO_ELEM_EDGEXD_FPRINT, and reimplemented zEdge3DFPrint. Added zEdge2DContigVert. Added ZEO_ELEM_EDGEXD_CONTIG_VERT_PROTOTYPE and ZEO_ELEM_EDGEXD_CONTIG_VERT, and reimplemented zEdge3DContigVert. Modified specification of zPlane3DPointIsOn to accept margin. Reimplemented ZEO_ELEM_TRIXD_ORTHOCENTER to use zTriXDCircumcenter. Renamed vert member of zPlane3D to origin, and zPlane3DVert/SetVert to zPlane3DOrg/SetOrg. Added zLine2D and zLine3D class. Renamed *DistPoint to *DistFromPoint. Renamed zPlane3DProj and zTri3DProj to zPlane3DProjPoint and zTri3DProjPlane, respectively. Debugged zVec2DOuterProdNorm. Renamed ZEO_ELEM_EDGEXD_PROJ_PROTOTYPE, zEdgeXDProj, and ZEO_ELEM_EDGEXD_PROJ to ZEO_ELEM_EDGEXD_PROJ_POINT_PROTOTYPE, zEdgeXDProjPoint, and ZEO_ELEM_EDGEXD_PROJ_POINT, respectively. Modified specification of ZEO_ELEM_EDGEXD_INIT to assign zero 2D vectors to both ends. Renamed ZEDGEXD* and ZTRIXD* to ZEO_ELEM_EDGEXD* and ZEO_ELEM_TRIXD*, respectively. Applied ZDEF_STRUCT to zTri2D, zDisk2D, zEllips2D, zPlane3D, and zTri3D. Redefined zEdge2D, zEdge2DVert, zEdge2DVec, zEdge2DSetVert, and zEdge2DSetVec. Redefined zEdge3D, zEdge3DVert, zEdge3DVec, zEdge3DSetVert, and zEdge3DSetVec. Defined ZEDGEXD_DEF_STRUCT, zEdgeXDVert, zEdgeXDVec, zEdgeXDSetVert, and zEdgeXDSetVec. Abolished zRimType.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,31 @@
+2024. 6.26. Reimplemented ZEO_ELEM_EDGEXD_LINSCALE as a static function generator. [zeo_elemxd]
+2024. 6.26. Reimplemented ZEO_ELEM_EDGEXD_DIST_FROM_POINT to use zEdgeXDClosest. [zeo_elemxd]
+2024. 6.26. Modified ZEO_ELEM_EDGEXD_CLOSEST not to use zEdgeXDLinScale. [zeo_elemxd]
+2024. 6.26. Reimplemented zVec3DOrthoSpace by using zVec3DOrthoNormal. [zeo_vec3d]
+2024. 6.25. Modified ZEO_ELEM_EDGEXD_PROJ_POINT. [zeo_elemxd]
+2024. 6.25. Added zEdge2DPointIsOn. [zeo_elem2d]
+2024. 6.25. Added ZEO_ELEM_EDGEXD_POINT_IS_ON_PROTOTYPE and ZEO_ELEM_EDGEXD_POINT_IS_ON, and reimplemented zEdge3DPointIsOn. [zeo_elemxd, zeo_elem3d]
+2024. 6.25. Removed _ZEO_ELEM_EDGEXD_PROJ_SET_PROTOTYPE. [zeo_elemxd]
+2024. 6.25. Added ZEO_ELEM_EDGEXD_POINT_IS_ON_LINE_PROTOTYPE and ZEO_ELEM_EDGEXD_POINT_IS_ON_LINE, and added zEdge2D/3DPointIsOnLine. [zeo_elemxd, zeo_elem2d, zeo_elem3d]
+2024. 6.25. Added zEdge2DFPrint. [zeo_elem2d]
+2024. 6.25. Added ZEO_ELEM_EDGEXD_FPRINT_PROTOTYPE and ZEO_ELEM_EDGEXD_FPRINT, and reimplemented zEdge3DFPrint. [zeo_elem3d]
+2024. 6.25. Added zEdge2DContigVert. [zeo_elem2d]
+2024. 6.25. Added ZEO_ELEM_EDGEXD_CONTIG_VERT_PROTOTYPE and ZEO_ELEM_EDGEXD_CONTIG_VERT, and reimplemented zEdge3DContigVert. [zeo_elemxd, zeo_elem3d]
+2024. 6.23. Modified specification of zPlane3DPointIsOn to accept margin. [zeo_elem3d]
+2024. 6.23. Reimplemented ZEO_ELEM_TRIXD_ORTHOCENTER to use zTriXDCircumcenter. [zeo_elemxd]
+2024. 6.23. Renamed vert member of zPlane3D to origin, and zPlane3DVert/SetVert to zPlane3DOrg/SetOrg. [zeo_elem3d, zeo_brep_trunc, zeo_col, zeo_col_box]
+2024. 6.22. Added zLine2D and zLine3D class. [zeo_elemxd, zeo_elem2d, zeo_elem3d]
+2024. 6.22. Renamed *DistPoint to *DistFromPoint. [zeo_elemxd, zeo_elem2d, zeo_elem3d, zeo_ph, zeo_shape3d*, zeo_bv3d_obb, zeo_col_gjk, zeo_col_ph]
+2024. 6.21. Renamed zPlane3DProj and zTri3DProj to zPlane3DProjPoint and zTri3DProjPlane, respectively. [zeo_elem3d, zeo_bv3d_obb]
+2024. 6.20. Debugged zVec2DOuterProdNorm. [zeo_vec2d]
+2024. 6.20. Renamed ZEO_ELEM_EDGEXD_PROJ_PROTOTYPE, zEdgeXDProj, and ZEO_ELEM_EDGEXD_PROJ to ZEO_ELEM_EDGEXD_PROJ_POINT_PROTOTYPE, zEdgeXDProjPoint, and ZEO_ELEM_EDGEXD_PROJ_POINT, respectively. [zeo_elemxd, zeo_elem2d, zeo_elem3d]
+2024. 6.20. Modified specification of ZEO_ELEM_EDGEXD_INIT to assign zero 2D vectors to both ends. [zeo_elemxd]
+2024. 6.20. Renamed ZEDGEXD* and ZTRIXD* to ZEO_ELEM_EDGEXD* and ZEO_ELEM_TRIXD*, respectively. [zeo_elemxd, zeo_elem2d, zeo_elem3d]
+2024. 6.18. Applied ZDEF_STRUCT to zTri2D, zDisk2D, zEllips2D, zPlane3D, and zTri3D. [zeo_elem2d, zeo_elem3d]
+2024. 6.18. Redefined zEdge2D, zEdge2DVert, zEdge2DVec, zEdge2DSetVert, and zEdge2DSetVec. [zeo_elem2d]
+2024. 6.18. Redefined zEdge3D, zEdge3DVert, zEdge3DVec, zEdge3DSetVert, and zEdge3DSetVec. [zeo_elem3d]
+2024. 6.18. Defined ZEDGEXD_DEF_STRUCT, zEdgeXDVert, zEdgeXDVec, zEdgeXDSetVert, and zEdgeXDSetVec. [zeo_elemxd]
+2024. 6.18. Abolished zRimType. [zeo_elem3d]
 2024. 6. 3. Added zFrame2DFromCoord2D and zCoord2DFromFrame2D. [zeo_frame2d]
 2024. 6. 3. Added zCoord2D class. [zeo_coord2d]
 2024. 6. 3. Added zMat2DAngle. [zeo_mat2d]
