Added zTri2DDistFromPoint. Added ZEO_ELEM_TRIXD_DIST_FROM_POINT_PROTOTYPE and ZEO_ELEM_TRIXD_DIST_FROM_POINT, and reimplemented zTri3DDistFromPoint. Added zTri2DProjPoint and zTri2DClosest. Added ZEO_ELEM_TRIXD_CLOSEST_PROTOTYPE and ZEO_ELEM_TRIXD_CLOSEST, and reimplemented zTri3DClosest. Added zTri2DContigVert. Added ZEO_ELEM_TRIXD_CONTIG_VERT_PROTOTYPE and ZEO_ELEM_TRIXD_CONTIG_VERT, and reimplemented zTri3DContigVert. Reimplemented zTri3DDistFromPoint to use zTri3DClosest. Debugged zTri3DClosest. Renamed zTri3DPointIsOn to zTri3DPointIsOnPlane, and modified specification to accept margin. Renamed zTri3DDistFromPoint to zTri3DDistFromPointToPlane.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,13 @@
+2024. 6.27. Added zTri2DDistFromPoint. [zeo_elem2d]
+2024. 6.27. Added ZEO_ELEM_TRIXD_DIST_FROM_POINT_PROTOTYPE and ZEO_ELEM_TRIXD_DIST_FROM_POINT, and reimplemented zTri3DDistFromPoint. [zeo_elemxd, zeo_elem3d]
+2024. 6.27. Added zTri2DProjPoint and zTri2DClosest. [zeo_elem2d]
+2024. 6.27. Added ZEO_ELEM_TRIXD_CLOSEST_PROTOTYPE and ZEO_ELEM_TRIXD_CLOSEST, and reimplemented zTri3DClosest. [zeo_elemxd, zeo_elem3d]
+2024. 6.27. Added zTri2DContigVert. [zeo_elem2d]
+2024. 6.27. Added ZEO_ELEM_TRIXD_CONTIG_VERT_PROTOTYPE and ZEO_ELEM_TRIXD_CONTIG_VERT, and reimplemented zTri3DContigVert. [zeo_elemxd, zeo_elem3d]
+2024. 6.27. Reimplemented zTri3DDistFromPoint to use zTri3DClosest. [zeo_elem3d]
+2024. 6.27. Debugged zTri3DClosest. [zeo_elem3d]
+2024. 6.27. Renamed zTri3DPointIsOn to zTri3DPointIsOnPlane, and modified specification to accept margin. [zeo_elem3d, zeo_col_gjk]
+2024. 6.27. Renamed zTri3DDistFromPoint to zTri3DDistFromPointToPlane. [zeo_elem3d, zeo_ph, zeo_col_ph, zeo_bv3d_obb]
 2024. 6.26. Reimplemented ZEO_ELEM_EDGEXD_LINSCALE as a static function generator. [zeo_elemxd]
 2024. 6.26. Reimplemented ZEO_ELEM_EDGEXD_DIST_FROM_POINT to use zEdgeXDClosest. [zeo_elemxd]
 2024. 6.26. Modified ZEO_ELEM_EDGEXD_CLOSEST not to use zEdgeXDLinScale. [zeo_elemxd]
