Defined ZTK_KEY_ZEO_SHAPE3D_CENTER, ZTK_KEY_ZEO_SHAPE3D_VERT, ZTK_KEY_ZEO_SHAPE3D_AX, ZTK_KEY_ZEO_SHAPE3D_AY, ZTK_KEY_ZEO_SHAPE3D_AZ, ZTK_KEY_ZEO_SHAPE3D_REF, ZTK_KEY_ZEO_SHAPE3D_DEPTH, ZTK_KEY_ZEO_SHAPE3D_WIDTH, ZTK_KEY_ZEO_SHAPE3D_HEIGHT, ZTK_KEY_ZEO_SHAPE3D_RADIUS, ZTK_KEY_ZEO_SHAPE3D_RX, ZTK_KEY_ZEO_SHAPE3D_RY, ZTK_KEY_ZEO_SHAPE3D_RZ, and ZTK_KEY_ZEO_SHAPE3D_DIV as "center", "vert", "ax", "ay", "az", "ref", "depth", "width", "height", "radius", "rx", "ry", "rz", and "div", respectively. Defined ZTK_KEY_ZEO_SHAPE3D_NAME, ZTK_KEY_ZEO_SHAPE3D_TYPE, ZTK_KEY_ZEO_SHAPE3D_OPTIC, ZTK_KEY_ZEO_SHAPE3D_TEXTURE, ZTK_KEY_ZEO_SHAPE3D_MIRROR, ZTK_KEY_ZEO_SHAPE3D_IMPORT, ZTK_KEY_ZEO_SHAPE3D_POS, ZTK_KEY_ZEO_SHAPE3D_ATT, ZTK_KEY_ZEO_SHAPE3D_ROT, and ZTK_KEY_ZEO_SHAPE3D_FRAME as "name", "type", "optic", "texture", "mirror", "import", "pos", "att", "rot", and "frame", respectively. Renamed ZEO_PH_KEY_VERT, ZEO_PH_KEY_FACE, ZEO_PH_KEY_LOOP, ZEO_PH_KEY_PRISM, and ZEO_PH_KEY_PYRAMID to ZTK_KEY_ZEO_PH_VERT, ZTK_KEY_ZEO_PH_FACE, ZTK_KEY_ZEO_PH_LOOP, ZTK_KEY_ZEO_PH_PRISM, and ZTK_KEY_ZEO_PH_PYRAMID, respectively. Defined ZTK_KEY_ZEO_NURBS_ORDER, ZTK_KEY_ZEO_NURBS_UKNOT, ZTK_KEY_ZEO_NURBS_VKNOT, ZTK_KEY_ZEO_NURBS_SIZE, ZTK_KEY_ZEO_NURBS_CP, and ZTK_KEY_ZEO_NURBS_SLICE as "order", "uknot", "vknot", "size", "cp", and "slice", respectively. Defined ZTK_KEY_ZEO_OPTIC_NAME, ZTK_KEY_ZEO_OPTIC_AMBIENT, ZTK_KEY_ZEO_OPTIC_DIFFUSE, ZTK_KEY_ZEO_OPTIC_SPECULAR, ZTK_KEY_ZEO_OPTIC_ESR, ZTK_KEY_ZEO_OPTIC_SHININESS, and ZTK_KEY_ZEO_OPTIC_ALPHA as "name", "ambient", "diffuse", "specular", "esr", "shininess", and "alpha", respectively. Defined ZTK_KEY_ZEO_TEXTURE_NAME, ZTK_KEY_ZEO_TEXTURE_FILE, ZTK_KEY_ZEO_TEXTURE_TYPE, ZTK_KEY_ZEO_TEXTURE_DEPTH, ZTK_KEY_ZEO_TEXTURE_COORD, and ZTK_KEY_ZEO_TEXTURE_FACE as "name", "file", "type", "depth", "coord", and "face", respectively. Defined ZTK_KEY_ZEO_MAP_TERRA_ORIGIN, ZTK_KEY_ZEO_MAP_TERRA_RESOLUTION, ZTK_KEY_ZEO_MAP_TERRA_SIZE, ZTK_KEY_ZEO_MAP_TERRA_ZRANGE, ZTK_KE

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,11 @@
+2024.11.10. Defined ZTK_KEY_ZEO_SHAPE3D_CENTER, ZTK_KEY_ZEO_SHAPE3D_VERT, ZTK_KEY_ZEO_SHAPE3D_AX, ZTK_KEY_ZEO_SHAPE3D_AY, ZTK_KEY_ZEO_SHAPE3D_AZ, ZTK_KEY_ZEO_SHAPE3D_REF, ZTK_KEY_ZEO_SHAPE3D_DEPTH, ZTK_KEY_ZEO_SHAPE3D_WIDTH, ZTK_KEY_ZEO_SHAPE3D_HEIGHT, ZTK_KEY_ZEO_SHAPE3D_RADIUS, ZTK_KEY_ZEO_SHAPE3D_RX, ZTK_KEY_ZEO_SHAPE3D_RY, ZTK_KEY_ZEO_SHAPE3D_RZ, and ZTK_KEY_ZEO_SHAPE3D_DIV as "center", "vert", "ax", "ay", "az", "ref", "depth", "width", "height", "radius", "rx", "ry", "rz", and "div", respectively. [zeo_shape3d, zeo_shape3d_box, zeo_shape3d_cyl, zeo_shape3d_cone, zeo_shape3d_capsule, zeo_shape3d_ecyl, zeo_shape3d_ellips, zeo_shape3d_sphere]
+2024.11. 9. Defined ZTK_KEY_ZEO_SHAPE3D_NAME, ZTK_KEY_ZEO_SHAPE3D_TYPE, ZTK_KEY_ZEO_SHAPE3D_OPTIC, ZTK_KEY_ZEO_SHAPE3D_TEXTURE, ZTK_KEY_ZEO_SHAPE3D_MIRROR, ZTK_KEY_ZEO_SHAPE3D_IMPORT, ZTK_KEY_ZEO_SHAPE3D_POS, ZTK_KEY_ZEO_SHAPE3D_ATT, ZTK_KEY_ZEO_SHAPE3D_ROT, and ZTK_KEY_ZEO_SHAPE3D_FRAME as "name", "type", "optic", "texture", "mirror", "import", "pos", "att", "rot", and "frame", respectively. [zeo_shape3d]
+2024.11. 9. Renamed ZEO_PH_KEY_VERT, ZEO_PH_KEY_FACE, ZEO_PH_KEY_LOOP, ZEO_PH_KEY_PRISM, and ZEO_PH_KEY_PYRAMID to ZTK_KEY_ZEO_PH_VERT, ZTK_KEY_ZEO_PH_FACE, ZTK_KEY_ZEO_PH_LOOP, ZTK_KEY_ZEO_PH_PRISM, and ZTK_KEY_ZEO_PH_PYRAMID, respectively. [zeo_ph]
+2024.11. 9. Defined ZTK_KEY_ZEO_NURBS_ORDER, ZTK_KEY_ZEO_NURBS_UKNOT, ZTK_KEY_ZEO_NURBS_VKNOT, ZTK_KEY_ZEO_NURBS_SIZE, ZTK_KEY_ZEO_NURBS_CP, and ZTK_KEY_ZEO_NURBS_SLICE as "order", "uknot", "vknot", "size", "cp", and "slice", respectively. [zeo_nurbs]
+2024.11. 9. Defined ZTK_KEY_ZEO_OPTIC_NAME, ZTK_KEY_ZEO_OPTIC_AMBIENT, ZTK_KEY_ZEO_OPTIC_DIFFUSE, ZTK_KEY_ZEO_OPTIC_SPECULAR, ZTK_KEY_ZEO_OPTIC_ESR, ZTK_KEY_ZEO_OPTIC_SHININESS, and ZTK_KEY_ZEO_OPTIC_ALPHA as "name", "ambient", "diffuse", "specular", "esr", "shininess", and "alpha", respectively. [zeo_render_optic]
+2024.11. 9. Defined ZTK_KEY_ZEO_TEXTURE_NAME, ZTK_KEY_ZEO_TEXTURE_FILE, ZTK_KEY_ZEO_TEXTURE_TYPE, ZTK_KEY_ZEO_TEXTURE_DEPTH, ZTK_KEY_ZEO_TEXTURE_COORD, and ZTK_KEY_ZEO_TEXTURE_FACE as "name", "file", "type", "depth", "coord", and "face", respectively. [zeo_render_texture]
+2024.11. 9. Defined ZTK_KEY_ZEO_MAP_TERRA_ORIGIN, ZTK_KEY_ZEO_MAP_TERRA_RESOLUTION, ZTK_KEY_ZEO_MAP_TERRA_SIZE, ZTK_KEY_ZEO_MAP_TERRA_ZRANGE, ZTK_KEY_ZEO_MAP_TERRA_TH_VAR, ZTK_KEY_ZEO_MAP_TERRA_TH_GRID, ZTK_KEY_ZEO_MAP_TERRA_TH_RES, and ZTK_KEY_ZEO_MAP_TERRA_GRID as "origin", "resolution", "size", "zrange", "th_var", "th_grd", "th_res", and "grid", respectively. [zeo_map_terra]
+2024.11. 9. Defined ZTK_KEY_ZEO_MAP_NAME and ZTK_KEY_ZEO_MAP_TYPE as "name" and "type", respectively. [zeo_map]
 2024.11. 8. Debugged zOpticalInfoToZTK to return the null pointer in failure cases. [zeo_render_optic]
 2024.11. 8. Added const qualifiers to function prototypes. [zeo_vec2d, zeo_mat2d, zeo_frame2d, zeo_vec3d, zeo_mat3d, zeo_frame3d, zeo_vec6d, zeo_mat6d]
 2024.10.29. Debugged __ztk_prp_zeo_mapnet. [zeo_mapnet]
