Added const qualifiers to __ztk_prp_optic, __ztk_prp_texture, __ztk_prp_ph, __ztk_prp_nurbs, __ztk_prp_shape, __ztk_prp_shape_box, __ztk_prp_shape_cyl, __ztk_prp_shape_cone, __ztk_prp_shape_capsule, __ztk_prp_shape_sphere, __ztk_prp_shape_ellips, __ztk_prp_shape_ecyl, __ztk_prp_zeo_mshape, __ztk_prp_terra, __ztk_prp_map_key, and __ztk_prp_mapnet. Renamed __ztk_prp_zeo_shape, __ztk_prp_zeo_mshape, __ztk_prp_map_key, and __ztk_prp_zeo_mapnet to __ztk_prp_shape, __ztk_prp_mshape, __ztk_prp_map, and __ztk_prp_mapnet, respectively.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+2024.11.11. Added const qualifiers to __ztk_prp_optic, __ztk_prp_texture, __ztk_prp_ph, __ztk_prp_nurbs, __ztk_prp_shape, __ztk_prp_shape_box, __ztk_prp_shape_cyl, __ztk_prp_shape_cone, __ztk_prp_shape_capsule, __ztk_prp_shape_sphere, __ztk_prp_shape_ellips, __ztk_prp_shape_ecyl, __ztk_prp_zeo_mshape, __ztk_prp_terra, __ztk_prp_map_key, and __ztk_prp_mapnet. [zeo_render_optic, zeo_render_texture, zeo_ph, zeo_nurbs, zeo_shape3d, zeo_shape3d_box, zeo_shape3d_cyl, zeo_shape3d_cone, zeo_shape3d_capsule, zeo_shape3d_sphere, zeo_shape3d_ellips, zeo_shape3d_ecyl, zeo_mshape3d, zeo_map, zeo_map_terra, zeo_mapnet]
+2024.11.11. Renamed __ztk_prp_zeo_shape, __ztk_prp_zeo_mshape, __ztk_prp_map_key, and __ztk_prp_zeo_mapnet to __ztk_prp_shape, __ztk_prp_mshape, __ztk_prp_map, and __ztk_prp_mapnet, respectively. [zeo_shape3d, zeo_mshape3d, zeo_map, zeo_map]
 2024.11.11. Modified _zOpticalInfoAmbientFPrintZTK, _zOpticalInfoDiffuseFPrintZTK, and _zOpticalInfoSpecularFPrintZTK not to check if the corresponding value is default or not. [zeo_render_optic]
 2024.11.10. Defined ZTK_KEY_ZEO_SHAPE3D_CENTER, ZTK_KEY_ZEO_SHAPE3D_VERT, ZTK_KEY_ZEO_SHAPE3D_AX, ZTK_KEY_ZEO_SHAPE3D_AY, ZTK_KEY_ZEO_SHAPE3D_AZ, ZTK_KEY_ZEO_SHAPE3D_REF, ZTK_KEY_ZEO_SHAPE3D_DEPTH, ZTK_KEY_ZEO_SHAPE3D_WIDTH, ZTK_KEY_ZEO_SHAPE3D_HEIGHT, ZTK_KEY_ZEO_SHAPE3D_RADIUS, ZTK_KEY_ZEO_SHAPE3D_RX, ZTK_KEY_ZEO_SHAPE3D_RY, ZTK_KEY_ZEO_SHAPE3D_RZ, and ZTK_KEY_ZEO_SHAPE3D_DIV as "center", "vert", "ax", "ay", "az", "ref", "depth", "width", "height", "radius", "rx", "ry", "rz", and "div", respectively. [zeo_shape3d, zeo_shape3d_box, zeo_shape3d_cyl, zeo_shape3d_cone, zeo_shape3d_capsule, zeo_shape3d_ecyl, zeo_shape3d_ellips, zeo_shape3d_sphere]
 2024.11. 9. Defined ZTK_KEY_ZEO_SHAPE3D_NAME, ZTK_KEY_ZEO_SHAPE3D_TYPE, ZTK_KEY_ZEO_SHAPE3D_OPTIC, ZTK_KEY_ZEO_SHAPE3D_TEXTURE, ZTK_KEY_ZEO_SHAPE3D_MIRROR, ZTK_KEY_ZEO_SHAPE3D_IMPORT, ZTK_KEY_ZEO_SHAPE3D_POS, ZTK_KEY_ZEO_SHAPE3D_ATT, ZTK_KEY_ZEO_SHAPE3D_ROT, and ZTK_KEY_ZEO_SHAPE3D_FRAME as "name", "type", "optic", "texture", "mirror", "import", "pos", "att", "rot", and "frame", respectively. [zeo_shape3d]
