--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,7 @@
+2024.11.11. Modified zMShape3DFPrintZTK to call fprint methods in _ZTKPrpTagFPrint with a help of ZTKPrpDup and _ZTKPrpSetNum. [zeo_mshape3d]
+2024.11.11. Added _zMShape3DOpticFPrint, _zMShape3DTextureFPrint, and _zMShape3DShapeFPrint, and assigned those functions for fprint methods of __ztk_prp_mshape. [zeo_mshape3d]
+2024.11.11. Added _zShape3DOpticFPrint and _zShape3DTextureFPrint, and modified __ztk_prp_shape to read those functions in ZTKEvalKey in zShape3DFPrintZTK. [zeo_shape3d]
+2024.11.11. Modified zTextureFromZTK to return a non-null pointer even in the cases where the read function is not assigned. [zeo_errmsg, zeo_render_texture]
 2024.11.11. Added const qualifiers to __ztk_prp_optic, __ztk_prp_texture, __ztk_prp_ph, __ztk_prp_nurbs, __ztk_prp_shape, __ztk_prp_shape_box, __ztk_prp_shape_cyl, __ztk_prp_shape_cone, __ztk_prp_shape_capsule, __ztk_prp_shape_sphere, __ztk_prp_shape_ellips, __ztk_prp_shape_ecyl, __ztk_prp_zeo_mshape, __ztk_prp_terra, __ztk_prp_map_key, and __ztk_prp_mapnet. [zeo_render_optic, zeo_render_texture, zeo_ph, zeo_nurbs, zeo_shape3d, zeo_shape3d_box, zeo_shape3d_cyl, zeo_shape3d_cone, zeo_shape3d_capsule, zeo_shape3d_sphere, zeo_shape3d_ellips, zeo_shape3d_ecyl, zeo_mshape3d, zeo_map, zeo_map_terra, zeo_mapnet]
 2024.11.11. Renamed __ztk_prp_zeo_shape, __ztk_prp_zeo_mshape, __ztk_prp_map_key, and __ztk_prp_zeo_mapnet to __ztk_prp_shape, __ztk_prp_mshape, __ztk_prp_map, and __ztk_prp_mapnet, respectively. [zeo_shape3d, zeo_mshape3d, zeo_map, zeo_map]
 2024.11.11. Modified _zOpticalInfoAmbientFPrintZTK, _zOpticalInfoDiffuseFPrintZTK, and _zOpticalInfoSpecularFPrintZTK not to check if the corresponding value is default or not. [zeo_render_optic]
