Defined ZEO_ERR_NURBS_ELLIPS_INVALID_KNOT_NUM and ZEO_ERR_NURBS_ELLIPS_INVALID_CP_NUM. Added _zNURBS3DEllipsInitKnot, _zNURBS3DEllipsInitCP, zNURBS3DECyl, zNURBS3DCone, zNURBS3DEllips, and zNURBS3DTorus to create NURBS surfaces that represent primitive shapes. Added zeo_nurbs_shape. Abolished ZEO_NURBS3D_DEFAULT_SLICE.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,7 @@
+2024.11.19. Defined ZEO_ERR_NURBS_ELLIPS_INVALID_KNOT_NUM and ZEO_ERR_NURBS_ELLIPS_INVALID_CP_NUM. [zeo_errmsg, zeo_nurbs]
+2024.11.19. Added _zNURBS3DEllipsInitKnot, _zNURBS3DEllipsInitCP, zNURBS3DECyl, zNURBS3DCone, zNURBS3DEllips, and zNURBS3DTorus to create NURBS surfaces that represent primitive shapes. [zeo_nurbs]
+2024.11.19. Added zeo_nurbs_shape. [src, zeo_nurbs_shape]
+2024.11.19. Abolished ZEO_NURBS3D_DEFAULT_SLICE. [zeo_nurbs]
 2024.11.17. Abolished ZEO_ERR_SHAPE_INV. [zeo_errmsg]
 2024.11.17. Renamed ZEO_ERR_ZERONORM, ZEO_ERR_SINGULARMAT, ZEO_ERR_NONSO3, ZEO_ERR_AXIS_INVALID, ZEO_ERR_AXIS_INVNAME, ZEO_ERR_DIR_INVALID, ZEO_ERR_DIR_INVNAME, ZEO_ERR_RGB, ZEO_ERR_INVINDEX, ZEO_ERR_CENTER_MANY, ZEO_ERR_RADIUS_MANY, ZEO_ERR_PH_INV_FACE, ZEO_ERR_PH_LOOP_INVALID, ZEO_ERR_PH_ARC_INV_RADIUS, ZEO_ERR_LONGNAME, ZEO_ERR_OPT_MANY, ZEO_ERR_OPT_INV, ZEO_ERR_OPT_UNNAME, ZEO_ERR_DAE_ARRSIZMIS, ZEO_ERR_DAE_STRIDEMIS, ZEO_ERR_DAE_URI_EMPTY, ZEO_ERR_DAE_URI_INVALID, ZEO_ERR_DAE_IDENTMIS, ZEO_ERR_DAE_NOT_COLLADA, ZEO_ERR_DAE_NO_GEOMETRY, ZEO_ERR_DAE_PRIM_UNSUPPORTED, ZEO_ERR_DAE_PRIM_INVALID, ZEO_ERR_DAE_FAILCONV, ZEO_ERR_NURBS_INVORDER, ZEO_ERR_NURBS_SIZMIS, ZEO_ERR_NURBS_INVCP, ZEO_ERR_SHAPE_INVTYPE, ZEO_ERR_SHAPE_MIRROR_INV_AXIS, ZEO_ERR_TERRA_INVSIZ, ZEO_ERR_TERRA_INVRSL, ZEO_ERR_TERRA_OOREG, ZEO_ERR_TERRA_OORAN, ZEO_ERR_MAP_UNSPEC, ZEO_WARN_STL_MIS_LOOP, ZEO_WARN_SHAPE_BB_INVALID, and ZEO_WARN_SHAPE_MIRROR_INV_TYPE to ZEO_ERR_VEC_ZERONORM, ZEO_ERR_MAT_SINGULAR, ZEO_ERR_MAT_NOTSO3, ZEO_ERR_INVALID_AXIS, ZEO_ERR_INVALID_AXIS_NAME, ZEO_ERR_INVALID_DIR, ZEO_ERR_INVALID_DIR_NAME, ZEO_ERR_INVALID_RGBSTR, ZEO_ERR_INVALID_INDEX, ZEO_ERR_TOOMANY_CENTERS, ZEO_ERR_TOOMANY_RADII, ZEO_ERR_PH_INVALID_FACE, ZEO_ERR_PH_INVALID_LOOP, ZEO_ERR_PH_TOOSMALL_ARC, ZEO_ERR_TOOLONGNAME, ZEO_ERR_TOOMANY_OPTICALINFO, ZEO_ERR_INVALID_OPTICALINFO, ZEO_ERR_UNNAMED_OPTICALINFO, ZEO_ERR_DAE_SIZEMISMATCH_ARRAY, ZEO_ERR_DAE_STRIDEMISMATCH, ZEO_ERR_DAE_EMPTY_URI, ZEO_ERR_DAE_INVALID_URI, ZEO_ERR_DAE_IDENTMISMATCH, ZEO_ERR_DAE_NOTCOLLADA, ZEO_ERR_DAE_NOGEOMETRY, ZEO_ERR_DAE_UNSUPPORTED_PRIM, ZEO_ERR_DAE_INVALID_PRIM, ZEO_ERR_DAE_FAILURE, ZEO_ERR_NURBS_INVALID_ORDER, ZEO_ERR_NURBS_SIZEMISMATCH, ZEO_ERR_NURBS_INVALID_CP, ZEO_ERR_SHAPE_INVALID_TYPE, ZEO_ERR_SHAPE_INVALID_MIRRORAXIS, ZEO_ERR_TERRA_INVALIDGRIDSIZE, ZEO_ERR_TERRA_INVALIDRESOLUTION, ZEO_ERR_TERRA_OUTOFREGION, ZEO_ERR_TERRA_OUTOFRANGE, ZEO_ERR_MAP_TYPENOTSPECIFIED, ZEO_WARN_STL_MISSINGLOOP, ZEO_WARN_SHAPE_INVALID_BB, and ZEO_WARN_SHAPE_INVALID_MIRRORTYPE, respectively. [zeo_misc, zeo_render_color, zeo_vec2d, zeo_mat2d, zeo_vec3d, zeo_mat3d, zeo_mat6d, zeo_ep, zeo_ph, zeo_ph_dae, zeo_nurbs, zeo_shape3d, zeo_map, zeo_map_terra]
 2024.11.17. Defined zNURBS3DOrder. [zeo_nurbs]
