Added zVec3DData for abstract class of a set of 3D vectors. Defined ZEO_ERR_NULLPOINTERASSIGNED. Debugged mshape3d_gp and zeo_gjk. Renamed zAABox2DDataFPrint to zAABox2DValueFPrint. Renamed zVec2DDataFPrint, zVec2DDataPrint, zVec2DDataNLFPrint, and zVec2DDataNLPrint to zVec2DValueFPrint, zVec2DValuePrint, zVec2DValueNLFPrint, and zVec2DValueNLPrint, respectively, and modified their prototypes to return the pointer to the given vector. Renamed zVec3DDataFPrint, zVec3DDataPrint, zVec3DDataNLFPrint, zVec3DDataNLPrint, zBox3DDataFPrint, and zAABox3DDataFPrint to zVec3DValueFPrint, zVec3DValuePrint, zVec3DValueNLFPrint, zVec3DValueNLPrint, zBox3DValueFPrint, and zAABox3DValueFPrint, respectively. Defined zVec3DArrayAlloc and zVec3DArrayFree. Reimplemented zVec3DListDestroy as a macro. Renamed zVec3DArray2Tree, _zVec3DTree2Array, zVec3DTree2Array, _zVec3DTreeNode2List, zVec3DTree2List, and zVec3DList2Tree to zVec3DArrayToTree, _zVec3DTreeToArray, zVec3DTreeToArray, _zVec3DTreeNodeToList, zVec3DTreeToList, and zVec3DListToTree, respectively. Modified vec_list_test and boundingball_test. Reflected new specification of zVec3dList to zeo_qhull. Reimplemented zVec3DList as to have an instance of zVec3D as data, and redefined zVec3DAddrList. Renamed zVec3DAddr to zVec3DAddrListCell.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,16 @@
+2024.12. 3. Added zVec3DData for abstract class of a set of 3D vectors. [zeo_vec3d, zeo_vec3d_data]
+2024.12. 3. Defined ZEO_ERR_NULLPOINTERASSIGNED. [zeo_errmsg]
+2024.12. 3. Debugged mshape3d_gp and zeo_gjk. [app]
+2024.12. 3. Renamed zAABox2DDataFPrint to zAABox2DValueFPrint. [zeo_bv2d_aabb, example]
+2024.12. 3. Renamed zVec2DDataFPrint, zVec2DDataPrint, zVec2DDataNLFPrint, and zVec2DDataNLPrint to zVec2DValueFPrint, zVec2DValuePrint, zVec2DValueNLFPrint, and zVec2DValueNLPrint, respectively, and modified their prototypes to return the pointer to the given vector. [zeo_vec2d, zeo_bv2d_aabb, zeo_voronoi2d, example]
+2024.12. 3. Renamed zVec3DDataFPrint, zVec3DDataPrint, zVec3DDataNLFPrint, zVec3DDataNLPrint, zBox3DDataFPrint, and zAABox3DDataFPrint to zVec3DValueFPrint, zVec3DValuePrint, zVec3DValueNLFPrint, zVec3DValueNLPrint, zBox3DValueFPrint, and zAABox3DValueFPrint, respectively. [zeo_vec3d, zeo_vec3d_list, zeo_ph_ply, zeo_ph_stl, zeo_shape3d_box, zeo_bv3d_aabb, zeo_bv3d_convexhull, zeo_col_gjk, example]
+2024.12. 2. Defined zVec3DArrayAlloc and zVec3DArrayFree. [zeo_vec3d]
+2024.12. 2. Reimplemented zVec3DListDestroy as a macro. [zeo_vec3d_list]
+2024.12. 2. Renamed zVec3DArray2Tree, _zVec3DTree2Array, zVec3DTree2Array, _zVec3DTreeNode2List, zVec3DTree2List, and zVec3DList2Tree to zVec3DArrayToTree, _zVec3DTreeToArray, zVec3DTreeToArray, _zVec3DTreeNodeToList, zVec3DTreeToList, and zVec3DListToTree, respectively. [zeo_vec3d_tree, zeo_ph_stl]
+2024.11.29. Modified vec_list_test and boundingball_test. [test]
+2024.11.29. Reflected new specification of zVec3dList to zeo_qhull. [app]
+2024.11.29. Reimplemented zVec3DList as to have an instance of zVec3D as data, and redefined zVec3DAddrList. [zeo_vec3d_list, zeo_vec3d_tree, zeo_vec3d_pca, zeo_pointcloud, zeo_shape3d_sphere, zeo_bv3d_aabb, zeo_bv2d_convexhull, zeo_bv3d_convexhull, zeo_bv3d_boundingbox, zeo_col_gjk, zeo_map_terra]
+2024.11.29. Renamed zVec3DAddr to zVec3DAddrListCell. [zeo_vec3d_list, zeo_elem3d_list]
 2024.11.19. Added zNURBS3DBox, zNURBS3DSphere, and zNURBS3DCyl. [zeo_nurbs_shape]
 2024.11.19. Added zSphere3DToEllips3D and zCyl3DToECyl3D. [zeo_nurbs_shape]
 2024.11.19. Applied ZDEF_STRUCT to zShape3DCom, zShape3D, zBox3D, zSphere3D, zCyl3D, zCone3D, zEllips3D, and zECyl3D. [zeo_shape3d, zeo_shape3d_box, zeo_shape3d_sphere, zeo_shape3d_cyl, zeo_shape3d_cone, zeo_shape3d_ellips, zeo_shape3d_ecyl]
