Renamed _zGJKPDInitAddPoint to _zGJKPDAddPoint. Renamed _zBoundingBall3DPL to _zBoundingBall3D. Renamed zVec6DDataFPrint, zVec6DDataPrint, zVec6DDataNLFPrint, and zVec6DDataNLPrint to zVec6DValueFPrint, zVec6DValuePrint, zVec6DValueNLFPrint, and zVec6DValueNLPrint, respectively. Reflect new specifications of zVec2DDataAABB, zVec3DDataAABB, zVec3DDataOBB, zVec3DDataBoundingBox, zVec3DDataConvexHull, zVec3DDataConvexHull2D, zGJK, and zMPR. Modified zeo_qhull to use zVec3DDataConvexHull. Modified zeo_gjk to reflect new specification of zGJK. Modified zMShape3DBoundingBall to use zVec3DDataBoundingBall. Abolished zMShape3DVertList, and added zMShape3DVertData. Modified _zIntersectPH3D to conform to new specification of zGJKDepth and zVec3DDataConvexHull. Modified specifications of _zMPRSupportMap, _zMPROrigin, _zMPRFindPortal, _zMPRRefinePortal, _zMPRDepth, zMPR, and zMPRDepth to use zVec3DData. Modified specifications of _zGJKSupportMap, _zGJKPDInitAddPoint, _zGJKPDInit, _zGJKPD, _zGJK, zGJK, zGJKDepth, _zGJKPointSupportMap, and zGJKPoint to use zVec3DData. Abolished zGJKPL. Abolished zPH3DMinkowskiSub, and added zVec3DDataMinkowskiSub. Abolished zDelaunayTriangulate2D and zVoronoiDiagram2D, and added zVec2DDataDelaunayTriangulate and zVec2DDataVoronoiDiagram. Modified specifications of _zDelaunay2DCreateOuter and _zVoronoi2DListInit to use zVec2DData. Abolished zBoundingBall3D and zBoundingBall3DPL, and added zVec3DDataBoundingBall. Abolished zBoundingDisk2D and zBoundingDisk2DPL, and added zVec2DDataBoundingDisk. Renamed _zBoundingDisk2DPL to _zBoundingDisk2D. Abolished zOBB3D and zOBB3DPL, and added zVec3DDataOBB. Abolished zConvexHull3DPL and zConvexHull3D, and added zVec3DDataConvexHull. Abolished zConvexHull2D, zConvexHull2DPL, zConvexHull2D2PH3D, and zConvexHull2DPL2PH3D, and added zVec3DDataConvexHull2D and zVec3DDataConvexHull2DPH3D. Added ZEO_VECXD_DATA_TO_ADDRLIST. Added zAABox3DCopy, zAABox3DMerge, and zAABox2DArea. Reimplemented classes and methods for zVe

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,45 @@
+2024.12.11. Renamed _zGJKPDInitAddPoint to _zGJKPDAddPoint. [zeo_col_gjk]
+2024.12.10. Renamed _zBoundingBall3DPL to _zBoundingBall3D. [zeo_bv3d_boundingball]
+2024.12. 9. Renamed zVec6DDataFPrint, zVec6DDataPrint, zVec6DDataNLFPrint, and zVec6DDataNLPrint to zVec6DValueFPrint, zVec6DValuePrint, zVec6DValueNLFPrint, and zVec6DValueNLPrint, respectively. [zeo_vec6d]
+2024.12. 9. Reflect new specifications of zVec2DDataAABB, zVec3DDataAABB, zVec3DDataOBB, zVec3DDataBoundingBox, zVec3DDataConvexHull, zVec3DDataConvexHull2D, zGJK, and zMPR. [example, app]
+2024.12. 8. Modified zeo_qhull to use zVec3DDataConvexHull. [app]
+2024.12. 8. Modified zeo_gjk to reflect new specification of zGJK. [app]
+2024.12. 8. Modified zMShape3DBoundingBall to use zVec3DDataBoundingBall. [zeo_mshape3d]
+2024.12. 8. Abolished zMShape3DVertList, and added zMShape3DVertData. [zeo_mshape3d]
+2024.12. 8. Modified _zIntersectPH3D to conform to new specification of zGJKDepth and zVec3DDataConvexHull. [zeo_col_ph]
+2024.12. 8. Modified specifications of _zMPRSupportMap, _zMPROrigin, _zMPRFindPortal, _zMPRRefinePortal, _zMPRDepth, zMPR, and zMPRDepth to use zVec3DData. [zeo_col_mpr]
+2024.12. 8. Modified specifications of _zGJKSupportMap, _zGJKPDInitAddPoint, _zGJKPDInit, _zGJKPD, _zGJK, zGJK, zGJKDepth, _zGJKPointSupportMap, and zGJKPoint to use zVec3DData. [zeo_col_gjk]
+2024.12. 8. Abolished zGJKPL. [zeo_col_gjk]
+2024.12. 8. Abolished zPH3DMinkowskiSub, and added zVec3DDataMinkowskiSub. [zeo_col_minkowski]
+2024.12. 7. Abolished zDelaunayTriangulate2D and zVoronoiDiagram2D, and added zVec2DDataDelaunayTriangulate and zVec2DDataVoronoiDiagram. [zeo_voronoi2d]
+2024.12. 7. Modified specifications of _zDelaunay2DCreateOuter and _zVoronoi2DListInit to use zVec2DData. [zeo_voronoi2d]
+2024.12. 7. Abolished zBoundingBall3D and zBoundingBall3DPL, and added zVec3DDataBoundingBall. [zeo_bv3d_boundingball]
+2024.12. 7. Abolished zBoundingDisk2D and zBoundingDisk2DPL, and added zVec2DDataBoundingDisk. [zeo_bv2d_boundingdisk]
+2024.12. 7. Renamed _zBoundingDisk2DPL to _zBoundingDisk2D. [zeo_bv2d_boundingdisk]
+2024.12. 7. Abolished zOBB3D and zOBB3DPL, and added zVec3DDataOBB. [zeo_bv3d_obb]
+2024.12. 7. Abolished zConvexHull3DPL and zConvexHull3D, and added zVec3DDataConvexHull. [zeo_bv3d_convexhull]
+2024.12. 7. Abolished zConvexHull2D, zConvexHull2DPL, zConvexHull2D2PH3D, and zConvexHull2DPL2PH3D, and added zVec3DDataConvexHull2D and zVec3DDataConvexHull2DPH3D. [zeo_bv2d_convexhull, zeo_bv3d_obb, zeo_bv3d_convexhull]
+2024.12. 7. Added ZEO_VECXD_DATA_TO_ADDRLIST. [zeo_vecxd_data, zeo_vec2d_data, zeo_vec3d_data]
+2024.12. 6. Added zAABox3DCopy, zAABox3DMerge, and zAABox2DArea. [zeo_bv2d_aabb]
+2024.12. 6. Reimplemented classes and methods for zVec2D/3DData with an abstract macros. [zeo_vecxd_data, zeo_vec2d_data, zeo_vec3d_data]
+2024.12. 5. Redefined classes and methods for zVec2D/3DList and zVec2D/3DAddrList with an abstract macros. [zeo_vecxd_list, zeo_vec2d_list, zeo_vec3d_list]
+2024.12. 5. Added zVec2DData class. [zeo_vec2d_data]
+2024.12. 5. Abolished zVec3DListNN, zVec3DSupportMap, and zVec3DListSupportMap. [zeo_vec3d_list]
+2024.12. 5. Renamed zVec3DListDataFPrint and zVec3DAddrListDataFPrint to zVec3DListValueFPrint and zVec3DAddrListValueFPrint, respectively. [zeo_vec3d_list]
+2024.12. 5. Renamed zVec3DArray2List to zVec3DArrayToList. [zeo_vec3d_list]
+2024.12. 4. Modified zIntersectPH3DBox to use zVec3DDataAABB. [zeo_col_box]
+2024.12. 4. Abolished zAABB3D, zAABB3DXform, _zAABB3DPLInc, zAABB3DPL, and zAABB3DXformPL, and added zVec3DDataAABB and zVec3DDataAABBXform. [zeo_bv3d_aabb]
+2024.12. 4. Abolished zVec3DBarycenterPL, zVec3DBarycenter, zVec3DPCA_PL, zVec3DPCA, zVec3DBaryPCA_PL, and zVec3DBaryPCA. [zeo_vec3d_pca]
+2024.12. 4. Modified zVec3DListPCDFRead, zVec3DListReadPCDFile, zVec3DListPCDFWrite, and zVec3DListWritePCDFile to read/write zVec3DData, and renamed zVec3DListPCDFRead and zVec3DListPCDFWrite to zVec3DDataFReadPCD and zVec3DDataFWritePCD, respectively. [zeo_pointcloud]
+2024.12. 3. Modified specification of zVec3DAddrListAppendArray to return the null pointer if it fails to allocate all cells for the given array. [zeo_vec3d_list]
+2024.12. 3. Added zVec3DAddrListFromList. [zeo_vec3d_list]
+2024.12. 3. Added zVec2DAddrListFromList. [zeo_vec2d_list]
+2024.12. 3. Modified specification of zVec2DAddrListCreate to return the null pointer if it fails to allocate all cells for the given array. [zeo_vec2d_list]
+2024.12. 3. Reimplemented zVec2DList as to have an instance of zVec2D as data, and redefined zVec2DAddrList. [zeo_vec2d_list, zeo_ph, zeo_bv2d_aabb, zeo_bv2d_boundingdisk, zeo_voronoi2d]
+2024.12. 3. Renamed zVec2DAddr to zVec2DAddrListCell. [zeo_vec2d_list]
+2024.12. 3. Modified zSphere3DFit to use zVec3DData instead of zVec3DList. [zeo_shape3d_sphere]
+2024.12. 3. Added zVec3DDataBarycenter, zVec3DDataPCA, and zVec3DDataBaryPCA. [zeo_vec3d_pca]
+2024.12. 3. Added zVec3DDataValueFPrint. [zeo_vec3d_data]
 2024.12. 3. Added zVec3DData for abstract class of a set of 3D vectors. [zeo_vec3d, zeo_vec3d_data]
 2024.12. 3. Defined ZEO_ERR_NULLPOINTERASSIGNED. [zeo_errmsg]
 2024.12. 3. Debugged mshape3d_gp and zeo_gjk. [app]
